--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 FRONTEND_URL = 'http://localhost:3000'
 MONGO_URL="mongodb://localhost:27017/Al-Midan"
 PORT = 5003
+S3_REGION= ap-south-1
+S3_ACCESS_KEY =AKIAU5ZGISIVSEPALZNZ
+S3_SECRET_ACCESS_KEY=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
+S3_COURSE_BUCKET_NAME=almidancoursecomplaint
