Deployment Changes Made

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 FRONTEND_URL='http://localhost:3000'
 # MONGO_URL="mongodb://localhost:27017/Al-Midan"
-MONGO_URL="mongodb+srv://easanedumangad:ByKn7EYAqmsgqTl0@cluster0.eyvqmzv.mongodb.net/Al-Midan?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URL="mongodb://mongodb-service:27017/Al-Midan"
+# MONGO_URL="mongodb+srv://easanedumangad:ByKn7EYAqmsgqTl0@cluster0.eyvqmzv.mongodb.net/Al-Midan?retryWrites=true&w=majority&appName=Cluster0"
 PORT=5003
 S3_REGION=ap-south-1
 S3_ACCESS_KEY=AKIAU5ZGISIVSEPALZNZ
